--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
       color: #e5e7eb;
     }
 
-    /* ===========================
-        رأس الصفحة + الشعار
-    ==============================*/
     .top-header {
       display: flex;
       align-items: center;
@@ -27,21 +24,13 @@
       top: 0;
       z-index: 1000;
     }
-
     .top-header img {
-      height: 65px;
+      height: 60px;
       border-radius: 10px;
     }
-
-    .main-title {
-      font-size: 20px;
-      font-weight: bold;
-    }
-
-    .sub-title {
-      font-size: 13px;
-      color: #94a3b8;
-    }
+    .title-block { display: flex; flex-direction: column; }
+    .main-title { font-size: 18px; font-weight: bold; color: #fff; }
+    .sub-title { font-size: 12px; color: #94a3b8; }
 
     .container {
       max-width: 960px;
@@ -49,9 +38,6 @@
       padding: 20px;
     }
 
-    /* ===========================
-          بطاقات الأيقونات
-    ==============================*/
     .icon-row {
       display: flex;
       flex-wrap: wrap;
@@ -62,211 +48,113 @@
 
     .icon-card {
       background: #0f172a;
-      border-radius: 18px;
+      border-radius: 16px;
       padding: 16px;
       width: 260px;
       text-align: center;
       cursor: pointer;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.4);
       transition: 0.2s;
-      box-shadow: 0 12px 26px rgba(0,0,0,0.45);
     }
-
     .icon-card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 18px 36px rgba(0,0,0,0.65);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.6);
     }
 
-    .icon-emoji {
-      font-size: 40px;
-      margin-bottom: 8px;
-    }
+    .icon-emoji { font-size: 40px; margin-bottom: 8px; }
 
-    /* ===========================
-              الأقسام
-    ==============================*/
     .section {
       display: none;
-      padding: 20px;
-      background: #0f172a;
+      background: #020617;
+      padding: 16px;
       border-radius: 16px;
-      margin-bottom: 30px;
       border: 1px solid #1f2937;
+      margin-bottom: 30px;
     }
+    .section.active { display: block; }
 
-    .section.active {
-      display: block;
-    }
-
-    /* ===========================
-            نموذج الحضور
-    ==============================*/
-    label {
-      margin-bottom: 6px;
-      display: block;
-    }
-
+    /* نموذج الحضور */
     input[type="text"], input[type="email"] {
       width: 100%;
-      padding: 10px;
-      border-radius: 10px;
+      padding: 8px;
+      border-radius: 8px;
       border: none;
       outline: none;
-      font-size: 15px;
+      font-size: 14px;
     }
-
     button {
-      padding: 10px 16px;
-      border-radius: 10px;
+      padding: 8px 16px;
+      border-radius: 8px;
       border: none;
       background: #22c55e;
       color: #020617;
       font-weight: bold;
       cursor: pointer;
-      margin-top: 10px;
-      font-size: 15px;
+      margin-top: 8px;
     }
 
-    .msg { margin-top: 10px; font-size: 14px; }
+    .msg { font-size: 14px; margin-top: 10px; }
     .msg.ok { color: #4ade80; }
     .msg.err { color: #f87171; }
 
-    /* ===========================
-        أفاتار متحرك
-    ==============================*/
-
-    .avatar-wrapper {
+    /* أفاتار متحرك */
+    .avatar-card {
       display: flex;
-      gap: 15px;
+      gap: 20px;
       align-items: center;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
-    .avatar-animated {
-      width: 100px;
-      height: 100px;
+    .avatar-anim {
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
-      background: url('avatar.png') center/cover no-repeat;
       border: 3px solid #22c55e;
-      position: relative;
-      animation: avatarMove 3s infinite ease-in-out;
+      object-fit: cover;
+      background: #0b1120;
     }
 
-    @keyframes avatarMove {
-      0% { transform: translateX(0); }
-      50% { transform: translateX(12px); }
-      100% { transform: translateX(0); }
-    }
+    .status { color: #9ca3af; font-size: 14px; }
 
     .chat-log {
-      padding: 10px;
-      height: 230px;
       background: #0f172a;
-      border-radius: 10px;
+      height: 220px;
       overflow-y: auto;
+      border-radius: 10px;
+      padding: 10px;
+      border: 1px solid #1e293b;
+      margin-bottom: 15px;
+    }
+
+    .msg-user { color: #38bdf8; margin-bottom: 4px; }
+    .msg-bot-ar { color: #a5b4fc; margin-bottom: 2px; }
+    .msg-bot-en { color: #fbbf24; margin-bottom: 8px; }
+
+    .chat-input-row {
+      display: flex;
+      gap: 8px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
+    }
+    th, td {
+      padding: 8px;
       border: 1px solid #1f2937;
+      text-align: center;
     }
-
-    .msg-user { color: #38bdf8; }
-    .msg-bot-ar { color: #a5b4fc; }
-    .msg-bot-en { color: #fbbf24; }
-
+    th { background: #111827; }
   </style>
-
-  <script>
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
-
-    showSection('attendance');
-
-    async function registerAttendance() {
-      const name = document.getElementById('name').value.trim();
-      const university = document.getElementById('university').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const msg = document.getElementById('regMsg');
-
-      msg.textContent = "";
-      msg.className = "msg";
-
-      if (!name || !university || !email) {
-        msg.textContent = "الرجاء تعبئة جميع الحقول.";
-        msg.classList.add("err");
-        return;
-      }
-
-      try {
-        const res = await fetch("/register", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, university, email })
-        });
-
-        const data = await res.json();
-
-        if (data.ok) {
-          msg.textContent = data.message;
-          msg.classList.add("ok");
-        } else {
-          msg.textContent = data.message;
-          msg.classList.add("err");
-        }
-      } catch {
-        msg.textContent = "تعذر الاتصال بالخادم.";
-        msg.classList.add("err");
-      }
-    }
-
-    function addMsg(txt, type) {
-      const log = document.getElementById("chatLog");
-      const p = document.createElement("p");
-      p.textContent = txt;
-      p.className = type;
-      log.appendChild(p);
-      log.scrollTop = log.scrollHeight;
-    }
-
-    function speakArabic(text) {
-      const u = new SpeechSynthesisUtterance(text);
-      u.lang = "ar-SA";
-      window.speechSynthesis.speak(u);
-    }
-
-    async function askAvatar() {
-      const q = document.getElementById("question").value.trim();
-      if (!q) return;
-
-      addMsg("👤 أنت: " + q, "msg-user");
-      document.getElementById("question").value = "";
-
-      try {
-        const res = await fetch("/ask", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question: q })
-        });
-
-        const data = await res.json();
-
-        addMsg("🤖 بالعربية: " + data.answer_ar, "msg-bot-ar");
-        speakArabic(data.answer_ar);
-
-        addMsg("🌐 English: " + data.answer_en, "msg-bot-en");
-
-      } catch {
-        addMsg("تعذر الاتصال بالخادم.", "msg-bot-ar");
-      }
-    }
-  </script>
-
 </head>
 
 <body>
 
-  <!-- رأس الصفحة -->
+  <!-- الهيدر + الشعار -->
   <div class="top-header">
-    <img src="logo.jpg" alt="Conference Logo">
-    <div>
+    <img src="logo.jpg" alt="شعار المؤتمر">
+    <div class="title-block">
       <div class="main-title">Chemistry Horizons – SSC2 2026</div>
       <div class="sub-title">Jerash University • Second Scientific Conference in Chemistry</div>
     </div>
@@ -274,74 +162,114 @@
 
   <div class="container">
 
-    <!-- الأيقونات -->
+    <!-- أيقونات -->
     <div class="icon-row">
-
       <div class="icon-card" onclick="showSection('attendance')">
         <div class="icon-emoji">📝</div>
         <strong>تسجيل الحضور</strong>
-        <div style="font-size:13px;color:#9ca3af;">الإسم – الجامعة – البريد الإلكتروني</div>
+        <div style="color:#94a3b8;font-size:13px;">الإسم – الجامعة – البريد الإلكتروني</div>
       </div>
 
       <div class="icon-card" onclick="showSection('avatar')">
         <div class="icon-emoji">🤖</div>
         <strong>أفاتار المؤتمر</strong>
-        <div style="font-size:13px;color:#9ca3af;">يتحدث العربية مع ترجمة إنجليزية</div>
+        <div style="color:#94a3b8;font-size:13px;">يتحدث العربية + ترجمة إنجليزية</div>
       </div>
 
       <div class="icon-card" onclick="showSection('schedule')">
         <div class="icon-emoji">📅</div>
         <strong>جدول المؤتمر</strong>
-        <div style="font-size:13px;color:#9ca3af;">عرض الجلسات والمحاور</div>
+        <div style="color:#94a3b8;font-size:13px;">عرض الجلسات والمحاور</div>
       </div>
-
     </div>
 
-    <!-- قسم 1 — الحضور -->
+    <!-- قسم الحضور -->
     <div id="attendance" class="section">
       <h2>تسجيل الحضور</h2>
 
       <label>الاسم الكامل</label>
-      <input id="name" type="text">
+      <input id="name" type="text" placeholder="اكتب اسمك">
 
       <label>الجامعة</label>
-      <input id="university" type="text">
+      <input id="university" type="text" placeholder="اسم الجامعة">
 
       <label>البريد الإلكتروني</label>
-      <input id="email" type="email">
+      <input id="email" type="email" placeholder="example@domain.com">
 
       <button onclick="registerAttendance()">تسجيل</button>
       <div id="regMsg" class="msg"></div>
     </div>
 
-    <!-- قسم 2 — الأفاتار -->
+    <!-- قسم الأفاتار -->
     <div id="avatar" class="section">
       <h2>أفاتار المؤتمر</h2>
 
-      <div class="avatar-wrapper">
-        <div class="avatar-animated"></div>
+      <div class="avatar-card">
+        <img src="https://media.tenor.com/p5J7G-TQHyMAAAAd/scientist-lab.gif" class="avatar-anim">
         <div>
           <strong>أستاذ الكيمياء الافتراضي</strong>
-          <div style="color:#94a3b8;">اسألني عن أي شيء يخص المؤتمر.</div>
+          <div class="status" id="avatarStatus">اسألني عن أي شيء في المؤتمر…</div>
         </div>
       </div>
 
       <div id="chatLog" class="chat-log"></div>
 
-      <input id="question" type="text" placeholder="اكتب سؤالك هنا...">
-      <button onclick="askAvatar()">إرسال</button>
+      <div class="chat-input-row">
+        <input id="question" type="text" placeholder="اكتب سؤالك…">
+        <button onclick="askAvatar()">إرسال</button>
+      </div>
     </div>
 
-    <!-- قسم 3 — جدول المؤتمر -->
+    <!-- جدول المؤتمر -->
     <div id="schedule" class="section">
       <h2>جدول المؤتمر</h2>
+
       <table>
-        <tr><th>اليوم</th><th>الوقت</th><th>الجلسة</th><th>المتحدث</th></tr>
-        <tr><td>الأول</td><td>10:00</td><td>الافتتاح</td><td>رئيس المؤتمر</td></tr>
+        <thead>
+          <tr>
+            <th>اليوم</th><th>الوقت</th><th>الجلسة</th><th>المتحدث</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>اليوم الأول</td><td>10:00 - 11:00</td><td>الجلسة الافتتاحية</td><td>رئيس المؤتمر</td></tr>
+          <tr><td>اليوم الأول</td><td>11:30 - 13:00</td><td>آفاق الكيمياء الخضراء</td><td>د. مثال</td></tr>
+          <tr><td>اليوم الثاني</td><td>10:00 - 11:30</td><td>التطبيقات الصناعية</td><td>د. مثال</td></tr>
+        </tbody>
       </table>
     </div>
 
   </div>
+
+<script>
+function showSection(id) {
+  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+}
+
+showSection('attendance');
+
+async function registerAttendance() {
+  const name = nameEl.value;
+  const university = universityEl.value;
+  const email = emailEl.value;
+}
+
+function addMsg(text, type) {
+  const p = document.createElement("p");
+  p.textContent = text;
+  p.className = type;
+  chatLog.appendChild(p);
+  chatLog.scrollTop = chatLog.scrollHeight;
+}
+
+async function askAvatar() {
+  const q = question.value.trim();
+  if (!q) return;
+
+  addMsg("👤 أنت: " + q, "msg-user");
+  question.value = "";
+}
+</script>
 
 </body>
 </html>
